--- a/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.FormsApp/NControlDemo.Forms.Xamarin.Plugins.FormsApp.csproj
+++ b/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.FormsApp/NControlDemo.Forms.Xamarin.Plugins.FormsApp.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Views\MainView.cs" />
     <Compile Include="Mvvm\IImageProvider.cs" />
     <Compile Include="Controls\FontAwesomeLabel.cs" />
+    <Compile Include="Controls\CircularButtonControl.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.4.0.6341\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.4.0.6341\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
