--- a/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.Utils/NControlDemo.Utils.csproj
+++ b/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.Utils/NControlDemo.Utils.csproj
@@ -4,11 +4,11 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <ProjectGuid>{79968FF8-9E85-42D1-9917-73B52F022969}</ProjectGuid>
+    <ProjectGuid>{C5A54152-DCDF-4ED8-B9F7-7A701EDD73CB}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>NControlDemo.Forms.Xamarin.Plugins.Localization</RootNamespace>
-    <AssemblyName>Clooger.Localization</AssemblyName>
-    <TargetFrameworkProfile>Profile259</TargetFrameworkProfile>
+    <RootNamespace>NControlDemo.Utils</RootNamespace>
+    <AssemblyName>NControlDemo.Forms.Xamarin.Plugins.Utils</AssemblyName>
+    <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -31,29 +31,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Strings.Designer.cs">
-      <DependentUpon>Strings.resx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <Compile Include="Strings.nb.Designer.cs">
-      <DependentUpon>Strings.nb.resx</DependentUpon>
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-    </Compile>
+    <Compile Include="Reflection\PropertyNameHelper.cs" />
+    <Compile Include="Classes\BaseNotifyPropertyChangedObject.cs" />
+    <Compile Include="Classes\ObservableCollectionWithAddRange.cs" />
+    <Compile Include="Classes\PropertyChangeListener.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
-  <ItemGroup />
   <ItemGroup>
-    <EmbeddedResource Include="Strings.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Strings.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Strings.nb.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Strings.nb.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
+    <Folder Include="Reflection\" />
+    <Folder Include="Classes\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
