--- a/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.FormsApp/NControlDemo.FormsApp.csproj
+++ b/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.FormsApp/NControlDemo.FormsApp.csproj
@@ -6,7 +6,7 @@
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{39EA0550-B11F-4ABC-B23A-61EB4136C775}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>NControlDemo.Forms.Xamarin.Plugins.FormsApp</RootNamespace>
+    <RootNamespace>NControlDemo.FormsApp</RootNamespace>
     <AssemblyName>NControlDemo.Forms.Xamarin.Plugins</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Profile78</TargetFrameworkProfile>
@@ -43,7 +43,6 @@
     <Compile Include="Mvvm\NavigationManager.cs" />
     <Compile Include="Mvvm\IView.cs" />
     <Compile Include="Mvvm\IViewWithParameter.cs" />
-    <Compile Include="ViewModels\MenuViewModel.cs" />
     <Compile Include="ViewModels\MasterViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="Views\MainView.cs" />
@@ -51,6 +50,7 @@
     <Compile Include="Controls\FontAwesomeLabel.cs" />
     <Compile Include="Controls\CircularButtonControl.cs" />
     <Compile Include="Controls\NavigationBarEx.cs" />
+    <Compile Include="Controls\ProgressControl.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.4.0.6341\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.4.0.6341\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -70,17 +70,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NControlDemo.Forms.Xamarin.Plugins.Localization\NControlDemo.Forms.Xamarin.Plugins.Localization.csproj">
-      <Project>{79968FF8-9E85-42D1-9917-73B52F022969}</Project>
-      <Name>NControlDemo.Forms.Xamarin.Plugins.Localization</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NControlDemo.Forms.Xamarin.Plugins.Utils\NControlDemo.Forms.Xamarin.Plugins.Utils.csproj">
-      <Project>{C5A54152-DCDF-4ED8-B9F7-7A701EDD73CB}</Project>
-      <Name>NControlDemo.Forms.Xamarin.Plugins.Utils</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\NControl\NControl.Forms.Xamarin.Plugins.Abstractions\NControl.Forms.Xamarin.Plugins.Abstractions.csproj">
       <Project>{E0951DAE-4B6E-421D-AA30-5BD2203D5DEC}</Project>
       <Name>NControl.Forms.Xamarin.Plugins.Abstractions</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NControlDemo.Forms.Xamarin.Plugins.Utils\NControlDemo.Utils.csproj">
+      <Project>{C5A54152-DCDF-4ED8-B9F7-7A701EDD73CB}</Project>
+      <Name>NControlDemo.Utils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NControlDemo.Forms.Xamarin.Plugins.Localization\NControlDemo.Localization.csproj">
+      <Project>{79968FF8-9E85-42D1-9917-73B52F022969}</Project>
+      <Name>NControlDemo.Localization</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
