--- a/NControlDemo/iOS/Info.plist
+++ b/NControlDemo/iOS/Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDisplayName</key>
-	<string>NControlDemo.Forms.Xamarin.Plugins.iOS</string>
+	<string>NControlDemo.OS</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.your-company.NControlDemo.Forms.Xamarin.Plugins.iOS</string>
+	<string>com.CF.NControlDemo.iOS</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
@@ -36,15 +36,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>XSAppIconAssets</key>
 	<string>Resources/Images.xcassets/AppIcons.appiconset</string>
 	<key>XSLaunchImageAssets</key>
 	<string>Resources/Images.xcassets/LaunchImage.launchimage</string>
-    <key>UIAppFonts</key>
-    <array>
-      <string>Fonts/fontawesome-webfont.ttf</string>
-    </array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Fonts/fontawesome-webfont.ttf</string>
+	</array>
 </dict>
 </plist>
