Added maps in the demo. Added module headers with license to all source files.

--- a/NControlDemo/Droid/NControlDemo.Droid.csproj
+++ b/NControlDemo/Droid/NControlDemo.Droid.csproj
@@ -76,6 +76,18 @@
     <Reference Include="NGraphics.Android">
       <HintPath>..\packages\NGraphics.0.1.10\lib\MonoAndroid10\NGraphics.Android.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Android.Support.v7.MediaRouter">
+      <HintPath>..\..\packages\Xamarin.Android.Support.v7.MediaRouter.21.0.3.0\lib\MonoAndroid403\Xamarin.Android.Support.v7.MediaRouter.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Maps.Android">
+      <HintPath>..\..\packages\Xamarin.Forms.Maps.1.4.0.6341\lib\MonoAndroid10\Xamarin.Forms.Maps.Android.dll</HintPath>
+    </Reference>
+    <Reference Include="Xamarin.Forms.Maps">
+      <HintPath>..\..\packages\Xamarin.Forms.Maps.1.4.0.6341\lib\MonoAndroid10\Xamarin.Forms.Maps.dll</HintPath>
+    </Reference>
+    <Reference Include="GooglePlayServicesLib">
+      <HintPath>..\..\packages\Xamarin.GooglePlayServices.22.0.0.2\lib\MonoAndroid41\GooglePlayServicesLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\NControl\NControl.Forms.Xamarin.Plugins.Droid\NControl.Forms.Xamarin.Plugins.Droid.csproj">
