--- a/NControlDemo/Droid/Properties/AndroidManifest.xml
+++ b/NControlDemo/Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 	<uses-sdk android:minSdkVersion="10" android:targetSdkVersion="21" />
-	<application android:label="NewSolution" android:theme="@style/Theme.NewSolution" android:icon="@drawable/icon">
+	<application android:label="NControlDemo" android:theme="@style/Theme.NewSolution" android:icon="@drawable/icon">
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="YOUR_API_KEY_HERE" />
 	</application>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<!-- The following two permissions are not required to use
+         Google Maps Android API v2, but are recommended. -->
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 </manifest>
