--- a/NControlDemo/Droid/packages.config
+++ b/NControlDemo/Droid/packages.config
@@ -5,5 +5,8 @@
   <package id="TinyIoC" version="1.3" targetFramework="MonoAndroid50" developmentDependency="true" />
   <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="21.0.3.0" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="21.0.3.0" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Forms" version="1.4.0.6341" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.Forms.Maps" version="1.4.0.6341" targetFramework="MonoAndroid50" />
+  <package id="Xamarin.GooglePlayServices" version="22.0.0.2" targetFramework="MonoAndroid50" />
 </packages>
