--- a/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.FormsApp/NControlDemo.FormsApp.csproj
+++ b/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.FormsApp/NControlDemo.FormsApp.csproj
@@ -65,23 +65,12 @@
     <Reference Include="NGraphics">
       <HintPath>..\packages\NGraphics.0.1.10\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NGraphics.dll</HintPath>
     </Reference>
+    <Reference Include="Xamarin.Forms.Maps">
+      <HintPath>..\..\packages\Xamarin.Forms.Maps.1.4.0.6341\lib\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Maps.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\NControl\NControl.Forms.Xamarin.Plugins.Abstractions\NControl.Forms.Xamarin.Plugins.Abstractions.csproj">
-      <Project>{E0951DAE-4B6E-421D-AA30-5BD2203D5DEC}</Project>
-      <Name>NControl.Forms.Xamarin.Plugins.Abstractions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NControlDemo.Forms.Xamarin.Plugins.Utils\NControlDemo.Utils.csproj">
-      <Project>{C5A54152-DCDF-4ED8-B9F7-7A701EDD73CB}</Project>
-      <Name>NControlDemo.Utils</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\NControlDemo.Forms.Xamarin.Plugins.Localization\NControlDemo.Localization.csproj">
-      <Project>{79968FF8-9E85-42D1-9917-73B52F022969}</Project>
-      <Name>NControlDemo.Localization</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\" />
@@ -90,5 +79,19 @@
     <Folder Include="Providers\" />
     <Folder Include="Controls\" />
     <Folder Include="Mvvm\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NControlDemo.Forms.Xamarin.Plugins.Utils\NControlDemo.Utils.csproj">
+      <Project>{C5A54152-DCDF-4ED8-B9F7-7A701EDD73CB}</Project>
+      <Name>NControlDemo.Utils</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\NControlDemo.Forms.Xamarin.Plugins.Localization\NControlDemo.Localization.csproj">
+      <Project>{79968FF8-9E85-42D1-9917-73B52F022969}</Project>
+      <Name>NControlDemo.Localization</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\NControl\NControl.Forms.Xamarin.Plugins.Abstractions\NControl.Forms.Xamarin.Plugins.Abstractions.csproj">
+      <Project>{E0951DAE-4B6E-421D-AA30-5BD2203D5DEC}</Project>
+      <Name>NControl.Forms.Xamarin.Plugins.Abstractions</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
