--- a/NControlDemo/iOS/packages.config
+++ b/NControlDemo/iOS/packages.config
@@ -4,4 +4,5 @@
   <package id="NGraphics" version="0.1.10" targetFramework="xamarinios10" />
   <package id="TinyIoC" version="1.3" targetFramework="xamarinios10" developmentDependency="true" />
   <package id="Xamarin.Forms" version="1.4.0.6341" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms.Maps" version="1.4.0.6341" targetFramework="xamarinios10" />
 </packages>
