--- a/NControl/NControl.Forms.Plugin.nuspec
+++ b/NControl/NControl.Forms.Plugin.nuspec
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.8.1">
-       <id>Xam.Plugins.Forms.NControl</id>
-       <version>1.0.0</version>
-       <title>NControl Control Plugin for Xamarin.Forms</title>
-       <authors>Christian Falch</authors>
-       <owners>Christian Falch</owners>
-       <licenseUrl>https://github.com/chrfalch/NControl/blob/master/LICENSE.md</licenseUrl>
-       <projectUrl>https://github.com/chrfalch/NControl</projectUrl>
-      
-       <requireLicenseAcceptance>false</requireLicenseAcceptance>
-       <description>
-          Custom control for your Xamarin.Forms project for creating controls using the NGraphics library.
-          Ensure you call NControlRenderer.Init() on each platform!
-       </description>
-       <summary>Use an NControl in your Xamarin.Forms projects! Ensure you call NControlRenderer.Init() on each platform!</summary>
-       <tags>xamarin, pcl, xam.pcl, windows phone, winphone, wp8, android, xamarin.forms, ios</tags>
+       <id>Xamarin.Forms.NControl</id>
+    <version>0.1.0</version>
+    <authors>Christian Falch</authors>
+    <owners>Christian Falch</owners>
+    <licenseUrl>https://github.com/chrfalch/NControl/blob/master/LICENSE.md</licenseUrl>
+    <projectUrl>https://github.com/chrfalch/NControl/</projectUrl>    
+    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <description>NControl is a Xamarin.Forms wrapper control built around the NGraphics library enabling developers to create custom controls without the need for custom renderers.</description>
+    <releaseNotes>Released for iOS and Android. Windows Phone in the works.</releaseNotes>
+    <copyright>Copyright 2015</copyright>
+    <tags>xamarin, pcl, xam.pcl, android, xamarin.forms, ios</tags>
        <dependencies>
          <dependency id="Xamarin.Forms" version="1.3.4.6332" />
          <dependency id="NGraphics" version="0.1.10" />
@@ -23,27 +19,16 @@
    </metadata>
    <files>
       <!--Core-->
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.dll" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NControl.Forms.Plugin.Abstractions.dll" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.xml" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NControl.Forms.Plugin.Abstractions.xml" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.pdb" target="lib\portable-net45+wp8+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NControl.Forms.Plugin.Abstractions.pdb" />
-
-     <!--Win Phone Silverlight
-     <file src="NControl.Forms.Plugin.WindowsPhone\bin\Release\NControl.Forms.Plugin.WindowsPhone.dll" target="lib\wp8\NControl.Forms.Plugin.WindowsPhone.dll" />
-     <file src="NControl.Forms.Plugin.WindowsPhone\bin\Release\NControl.Forms.Plugin.WindowsPhone.xml" target="lib\wp8\NControl.Forms.Plugin.WindowsPhone.xml" />
-     <file src="NControl.Forms.Plugin.WindowsPhone\bin\Release\NControl.Forms.Plugin.WindowsPhone.pdb" target="lib\wp8\NControl.Forms.Plugin.WindowsPhone.pdb" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.dll" target="lib\wp8\NControl.Forms.Plugin.Abstractions.dll" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.xml" target="lib\wp8\NControl.Forms.Plugin.Abstractions.xml" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.pdb" target="lib\wp8\NControl.Forms.Plugin.Abstractions.pdb" />
-     -->
+     <file src="NControl.Forms.Xamarin.Plugins.Abstractions/bin/Release/NControl.Xamarin.Plugins.Abstractions.dll" 
+      target="lib\portable-net45MonoAndroid10+Xamarin.iOS10\NControl.Xamarin.Plugins.Abstractions.dll" />
      
      <!--Xamarin.Android-->
-     <file src="NControl.Forms.Plugin.Android\bin\Release\NControl.Forms.Plugin.Android.dll" target="lib\MonoAndroid10\NControl.Forms.Plugin.Android.dll" />
-     <file src="NControl.Forms.Plugin.Android\bin\Release\NControl.Forms.Plugin.Android.xml" target="lib\MonoAndroid10\NControl.Forms.Plugin.Android.xml" />
-     <file src="NControl.Forms.Plugin.Android\bin\Release\NControl.Forms.Plugin.Android.pdb" target="lib\MonoAndroid10\NControl.Forms.Plugin.Android.pdb" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.dll" target="lib\MonoAndroid10\NControl.Forms.Plugin.Abstractions.dll" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.xml" target="lib\MonoAndroid10\NControl.Forms.Plugin.Abstractions.xml" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.pdb" target="lib\MonoAndroid10\NControl.Forms.Plugin.Abstractions.pdb" />
+     <file src="NControl.Forms.Xamarin.Plugins.Droid/bin/Release/NControl.Xamarin.Plugins.Droid.dll" 
+      target="lib\MonoAndroid10\NControl.Forms.Plugin.Droid.dll" />
 
+     <file src="NControl.Forms.Xamarin.Plugins.Droid/bin/Release/NControl.Xamarin.Plugins.Abstractions.dll" 
+      target="lib\MonoAndroid10\NControl.Forms.Plugin.Abstractions.dll" />
+     
      <!--Xamarin.iOS
      <file src="NControl.Forms.Plugin.iOS\bin\iPhone\Release\NControl.Forms.Plugin.iOS.dll" target="lib\MonoTouch10\NControl.Forms.Plugin.iOS.dll" />
      <file src="NControl.Forms.Plugin.iOS\bin\iPhone\Release\NControl.Forms.Plugin.iOS.xml" target="lib\MonoTouch10\NControl.Forms.Plugin.iOS.xml" />
@@ -52,10 +37,11 @@
      -->
 
      <!--Xamarin.iOSUnified-->
-     <file src="NControl.Forms.Plugin.iOSUnified\bin\iPhone\Release\NControl.Forms.Plugin.iOS.dll" target="lib\Xamarin.iOS10\NControl.Forms.Plugin.iOS.dll" />
-     <file src="NControl.Forms.Plugin.iOSUnified\bin\iPhone\Release\NControl.Forms.Plugin.iOS.xml" target="lib\Xamarin.iOS10\NControl.Forms.Plugin.iOS.xml" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.dll" target="lib\Xamarin.iOS10\NControl.Forms.Plugin.Abstractions.dll" />
-     <file src="NControl.Forms.Plugin.Abstractions\bin\Release\NControl.Forms.Plugin.Abstractions.xml" target="lib\Xamarin.iOS10\NControl.Forms.Plugin.Abstractions.xml" />
+     <file src="NControl.Forms.Xamarin.Plugins.iOS/bin/Release/NControl.Forms.Xamarin.Plugins.iOS.dll" 
+      target="lib\Xamarin.iOS10\NControl.Forms.Plugin.Droid.dll" />
+
+     <file src="NControl.Forms.Xamarin.Plugins.iOS/bin/Release/NControl.Xamarin.Plugins.Abstractions.dll" 
+      target="lib\Xamarin.iOS10\NControl.Forms.Plugin.Abstractions.dll" />
       
    </files>
 </package>
