--- a/NControl/NControl.Forms.Plugin.nuspec
+++ b/NControl/NControl.Forms.Plugin.nuspec
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.8.1">
-       <id>Xamarin.Forms.NControl</id>
+       <id>NControl</id>
     <version>0.1.0</version>
     <authors>Christian Falch</authors>
     <owners>Christian Falch</owners>
@@ -20,7 +20,7 @@
    <files>
       <!--Core-->
      <file src="NControl.Forms.Xamarin.Plugins.Abstractions/bin/Release/NControl.Xamarin.Plugins.Abstractions.dll" 
-      target="lib\portable-net45MonoAndroid10+Xamarin.iOS10\NControl.Xamarin.Plugins.Abstractions.dll" />
+      target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NControl.Xamarin.Plugins.Abstractions.dll" />
      
      <!--Xamarin.Android-->
      <file src="NControl.Forms.Xamarin.Plugins.Droid/bin/Release/NControl.Xamarin.Plugins.Droid.dll" 
