--- a/NControl/NControl.Forms.Xamarin.Plugins.Droid/NControl.Forms.Xamarin.Plugins.Droid.csproj
+++ b/NControl/NControl.Forms.Xamarin.Plugins.Droid/NControl.Forms.Xamarin.Plugins.Droid.csproj
@@ -12,7 +12,7 @@
     <AndroidResgenClass>Resource</AndroidResgenClass>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <AssemblyName>NControl.Xamarin.Plugins.Droid</AssemblyName>
+    <AssemblyName>NControl.Droid</AssemblyName>
     <TargetFrameworkVersion>v5.0</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
