--- a/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.FormsApp/NControlDemo.FormsApp.csproj
+++ b/NControlDemo/NControlDemo.Forms.Xamarin.Plugins.FormsApp/NControlDemo.FormsApp.csproj
@@ -51,6 +51,12 @@
     <Compile Include="Controls\CircularButtonControl.cs" />
     <Compile Include="Controls\NavigationBarEx.cs" />
     <Compile Include="Controls\ProgressControl.cs" />
+    <Compile Include="Views\MainViewXaml.xaml.cs">
+      <DependentUpon>MainViewXaml.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MyPage.xaml.cs">
+      <DependentUpon>MyPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.1.4.0.6341\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.1.4.0.6341\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
@@ -94,5 +100,13 @@
     <Reference Include="NGraphics">
       <HintPath>..\..\packages\NGraphics.0.1.10\lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NGraphics.dll</HintPath>
     </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\MainViewXaml.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\MyPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
