--- a/NControl/NControl.iOS/NControl.iOS.csproj
+++ b/NControl/NControl.iOS/NControl.iOS.csproj
@@ -32,14 +32,6 @@
     <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NGraphics, Version=0.2.2.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\NGraphics.0.2.2\lib\Xamarin.iOS10\NGraphics.dll</HintPath>
-    </Reference>
-    <Reference Include="NGraphics.iOS, Version=1.0.5567.34601, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\NGraphics.0.2.2\lib\Xamarin.iOS10\NGraphics.iOS.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
@@ -53,6 +45,12 @@
       <HintPath>..\..\packages\Xamarin.Forms.1.4.1.6349\lib\Xamarin.iOS10\Xamarin.Forms.Xaml.dll</HintPath>
     </Reference>
     <Reference Include="Xamarin.iOS" />
+    <Reference Include="NGraphics">
+      <HintPath>..\..\packages\NGraphics.0.2.2\lib\Xamarin.iOS10\NGraphics.dll</HintPath>
+    </Reference>
+    <Reference Include="NGraphics.iOS">
+      <HintPath>..\..\packages\NGraphics.0.2.2\lib\Xamarin.iOS10\NGraphics.iOS.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
