--- a/NControlDemo/NControlDemo.FormsApp/packages.config
+++ b/NControlDemo/NControlDemo.FormsApp/packages.config
@@ -3,5 +3,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
   <package id="NGraphics" version="0.2.2" targetFramework="portable-net45+win+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Xamarin.Forms" version="1.4.1.6349" targetFramework="portable-net45+win+wpa81+wp80+MonoAndroid10+xamarinios10+MonoTouch10" />
-  <package id="Xamarin.Forms.Maps" version="1.4.0.6341" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" requireReinstallation="True" />
+  <package id="Xamarin.Forms.Maps" version="1.4.1.6349" targetFramework="portable-net45+win+wp80+MonoTouch10+MonoAndroid10+xamarinmac20+xamarinios10" />
 </packages>
