--- a/NControl/NControl.nuspec
+++ b/NControl/NControl.nuspec
@@ -2,14 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
    <metadata minClientVersion="2.8.1">
        <id>NControl</id>
-    <version>0.3.0</version>
+    <version>0.3.1</version>
     <authors>Christian Falch</authors>
     <owners>Christian Falch</owners>
     <licenseUrl>https://github.com/chrfalch/NControl/blob/master/LICENSE.md</licenseUrl>
     <projectUrl>https://github.com/chrfalch/NControl/</projectUrl>    
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>NControl is a Xamarin.Forms wrapper control built around the NGraphics library enabling developers to create custom controls without the need for custom renderers.</description>
-    <releaseNotes>Released for iOS and Android. Windows Phone in the works.</releaseNotes>
+    <releaseNotes>Released for iOS, Android and Windows Phone Silverlight 8.1.</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>xamarin, pcl, xam.pcl, android, xamarin.forms, ios</tags>
        <dependencies>
@@ -19,7 +19,7 @@
    </metadata>
    <files>
       <!--Core-->
-     <file src="NControl/bin/Release/NControl.dll" target="lib\portable-net45+wp81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NControl.dll" />
+     <file src="NControl/bin/Release/NControl.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10\NControl.dll" />
      
      <!--Xamarin.Android-->
      <file src="NControl.Droid/bin/Release/NControl.Droid.dll" target="lib\MonoAndroid10\NControl.Droid.dll" />
