--- a/NControl/NControl.iOS/NControl.iOS.csproj
+++ b/NControl/NControl.iOS/NControl.iOS.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NControlViewRenderer.cs" />
+    <Compile Include="UITouchesGestureRecognizer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
