--- a/NControlDemo/NControlDemo.Droid/packages.config
+++ b/NControlDemo/NControlDemo.Droid/packages.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="MonoAndroid50" />
-  <package id="NGraphics" version="0.2.2" targetFramework="MonoAndroid50" />
-  <package id="TinyIoC" version="1.3" targetFramework="MonoAndroid50" developmentDependency="true" />
-  <package id="Xamarin.Android.Support.v4" version="22.2.0.0" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="22.2.0.0" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="22.2.0.0" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.Forms.Maps" version="1.4.2.6359" targetFramework="MonoAndroid50" />
-  <package id="Xamarin.GooglePlayServices" version="22.0.0.2" targetFramework="MonoAndroid50" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid5" />
+  <package id="NGraphics" version="0.2.2" targetFramework="monoandroid5" />
+  <package id="TinyIoC" version="1.3" targetFramework="monoandroid5" developmentDependency="true" />
+  <package id="Xamarin.Android.Support.v4" version="22.2.1.0" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="22.2.1.0" targetFramework="monoandroid5" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="22.2.1.0" targetFramework="monoandroid5" />
+  <package id="Xamarin.Forms" version="1.4.2.6359" targetFramework="monoandroid5" />
+  <package id="Xamarin.Forms.Maps" version="1.4.2.6359" targetFramework="monoandroid5" />
+  <package id="Xamarin.GooglePlayServices" version="22.0.0.2" targetFramework="monoandroid5" />
 </packages>
